--- a/13-Advanced-DOM-Bankist/style.css
+++ b/13-Advanced-DOM-Bankist/style.css
@@ -38,12 +38,12 @@ body {
   padding: 15rem 3rem;
   border-top: 1px solid #ddd;
 
-  transition: transform 1s, opacity 1s;
+  transition: transform 0.7s ease-in-out, opacity 1s;
 }
 
 .section--hidden {
   opacity: 0;
-  transform: translateY(8rem);
+  transform: translateY(12rem);
 }
 
 .section__title {
